Custom exception handlers and endpoints implementation